# django-helpdesk

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
django_helpdesk/: admin.py  apps.py  models.py
django_helpdesk/migrations/: 0001_initial.py
example_project/example_project/: settings.py
src/django_helpdesk/: admin.py  models.py
tests/: test_admin.py  test_models.py  test_settings.py
tests/test_app/: admin.py  models.py
