[metadata]
name = django_helpdesk
version = 0.1.0
long_description = file: README.md, LICENSE.txt
url = https://github.com/genosltd/django-helpdesk
author = Genadij Razdorov
author_email = genadijrazdorov@gmail.com
clasifiers = 
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Framework :: Django
    Development Status :: 3 - Alpha

[options]
package_dir =
    =src
packages = find:
install_requires =
    django >= 3.1
    django-hashtag @ git+https://github.com/genosltd/django-hashtag@latest
    django-comment @ git+https://github.com/genosltd/django-comment@latest

python_requires = >=3.6, <4

[options.packages.find]
where = src
